# stravis

./: README.md  pyproject.toml
stravis/: stravis.py
stravis/backend/classes/: strava.py
stravis/frontend/templates/: api-tests.html  base.html  index.html
